2006-09-18  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/tritonus-sound/Makefile.am
	(AM_JAVACFLAGS): Use -bootclasspath instead of -classpath.

	Reported by:  Riccardo Mottola  <mottolla@kaffe.org>

2006-09-18  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/Makefile.am,
	libraries/javalib/gmp-math/Makefile.am,
	libraries/javalib/zlib-zip/Makefile.am (AM_JAVACFLAGS)
	Use -bootclasspath instead of -classpath.

	Fix for bug #66.

2006-09-18  Dalibor Topic  <robilad@kaffe.org>

	* autobuild.sh: New file. Adds support for Test-Autobuild,
	an autobuilder from autobuild.org.

	* developers/auto-build.conf: New file. Configuration for 
	the autobuilder.

	* developers/README: Added information on 
	developers/auto-build.conf.

	* Makefile.am (EXTRA_DIST): Added autobuild.sh and 
	developers/auto-build.conf.

2006-09-16  Guilhem Lavaux  <guilhem@kaffe.org>

	* developers/autogen.sh,
	developers/config4.patch: Removed config4.patch

	* libraries/javalib/external/classpath/configure.ac:
	Added checking for declaration of socklen_t in sys/socket.h

	*
	libraries/javalib/external/classpath/native/target/generic/target_generic_network.h:
	Added some replacement code for missing socklen_t.

	* libraries/javalib/external/classpath/config.guess,
	libraries/javalib/external/classpath/configure,
	libraries/javalib/external/classpath/ltmain.sh,
	libraries/javalib/external/classpath/include/config.h.in: Regenerated.

	Fix bug #62

2006-09-16  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/vmspecific/Makefile.am (AM_JAVACFLAGS):
	Set -bootclasspath instead of -classpath to make sure it works
	with compilers configured to use a different class library.

        Reported by Riccardo Mottola <mottola@kaffe.org>

2006-09-13  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/signal.c 
	(KaffePThread_detectStackBoundaries): Added missing 
	casts to fix compiler warning on alpha-linux.
