@@ -1,3 +1,8 @@
+2006-09-19  Riccardo Mottola <riccardo@kaffe.org>
+
+	* libraries/javalib/awt-implementations/kaffe/java/awt/AWTEvent.java:
+	added isFocusManager field
+
 2006-09-18  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/javalib/tritonus-sound/Makefile.am
